# lem_in

./: CMakeLists.txt  Makefile  a.out  add_link.c  add_q_static.c  add_room.c  add_visited_static.c  add_way.c  ant_number.c  count_char.c  create_first_way.c  create_matrix.c  create_room_list.c  del_last_visited.c  del_q_static.c  dfs.c  error.c  filler.h  find_id.c  find_room.c  find_room_by_id.c  find_ways_and_push_ants.c  free.c  ft_counts.c  ft_countw.c  ft_delete_path.c  ft_lstadd.c  ft_lstnew.c  ft_putnbr.c  ft_putstr.c  ft_remove_redundant_path.c  ft_room_in_path.c  ft_room_position.c  ft_strcat.c  ft_strchr.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strncpy.c  ft_strnequ.c  (+41 more)
bonus/: subway_kiev
maps/: ._algo_2.txt  ._algo_3.txt  ._algo_gen13_maxint.txt  ._hpj.txt  11_m.txt  14_m.txt  15_m.txt  16_m.txt  17_m.txt  20_m.txt  21_m.txt  22_m.txt  23_m.txt  24_m.txt  25_m.txt  26_m.txt  27_m.txt  28_m.txt  29_m.txt  2_m.txt  30_m.txt  31_m.txt  32_m.txt  34_m.txt  35_comments.txt  4_m.txt  5_m.txt  6_m.txt  8_m.txt  9_m.txt  algo.txt  algo_2.txt  algo_3.txt  algo_4.txt  algo_600.txt  algo_divided.txt  algo_gen13.txt  algo_gen13_maxint.txt  algo_gen7.txt  algo_hard_abc.txt  (+7 more)
